<resources>
    <string name="app_name">小简报</string>
    <string name="splash_author">picture_author</string>
    <string name="splash_slogan">每日三次，每次七分钟</string>
    <string name="menu_notifications">menu_notifications</string>
    <string name="menu_follow">menu_follow</string>
    <string name="menu_comment">menu_comment</string>
    <string name="menu_styles_night">夜间模式</string>
    <string name="menu_setting_option">设置选项</string>
    <string name="toolbar_title">首页</string>
    <string name="main_latest_news">今日热闻</string>
    <string name="error_request_failure">请求服务器失败</string>
    <string name="error_network_failure">网络错误</string>
    <string name="drawer_login_tip">请登录</string>
    <string name="drawer_collect">我的收藏</string>
    <string name="drawer_download">离线下载</string>
    <string name="notification_downloading">正在离线最新内容 (%1$s)</string>
    <string name="notification_download">离线完成</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="news_content">消息内容</string>
    <string name="theme_content">主题内容</string>
    <string name="theme_title">主题日报</string>
    <string name="theme_editor">主编</string>
    <string name="weixin_share">微信分享</string>
    <string name="weixin_share_description">(分享自 @之乎日报 APP)</string>
    <string name="news_comments">%1$s条点评</string>
    <string name="long_comments">%1$s条长评</string>
    <string name="short_comments">%1$s条短评</string>
    <string name="comment_expand">展开</string>
    <string name="comment_close">收起</string>
    <string name="comment_empty">深度长评虚位以待</string>
    <string name="comment_reply_to">//%1$s：</string>
    <string name="comment_reply_to_delete">抱歉，原点评已经被删除</string>
    <string name="menu_save_photo">保存</string>
    <string name="save_photo_success">图片保存成功</string>
    <string name="save_photo_failure">图片保存失败</string>
    <string name="download_failure">离线下载失败，请重试</string>
    <string name="download_success">离线下载成功</string>


</resources>
