<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_17181A"
    tools:context="com.lxw.dailynews.app.ui.viewImp.SplashActivity">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txt_author"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_20"
            tools:text="@string/splash_author"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_footview"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80">
        <ImageView
            android:id="@+id/img_icon"
            android:layout_marginLeft="@dimen/dp_30"
            android:background="@drawable/bg_rounded_frame"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_title"
                android:text="@string/app_name"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_slogan"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/splash_slogan"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
