<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/color_00A0EC"
        android:paddingLeft="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100">
        <RelativeLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0">
            <ImageView
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_default_avatar"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"/>
            <TextView
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_50"
                android:text="@string/drawer_login_tip"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/color_FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <LinearLayout
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0">
            <RelativeLayout
                android:id="@+id/drawer_collect"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_collect"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"/>
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/drawer_collect"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/color_FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/drawer_download"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_download"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"/>
                <TextView
                    android:id="@+id/txt_download"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/drawer_download"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/color_FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_home"
        android:background="@drawable/selector_background"
        android:paddingLeft="@dimen/dp_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">
        <ImageView
            android:src="@mipmap/ic_home"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"/>
        <TextView
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/toolbar_title"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_0093FE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
